styles.css
.flatSearch_openMapButton {
	position: fixed;
	right: 0;
	top: 50%;
	transform: translateY(-50%)
}

.flatSearch_bodyOffset {
	padding-right: 25%;
}

#flatSearch_mapElement {
	position: fixed;
	right: 0;
	top: 0;
	z-index: 1000;
	width: 29%;
	height: 100%;

	overflow: hidden;
}

.flatSearch_support {
	position: fixed;
	left: 71%;
	bottom: 0;
	color: #fff;
}

.flatSearch_hideMapButton {
	position: fixed;
	right: 10px;
	top: 10px;
}

.flatSearch_marker-inner {
	width: 40px !important;
	height: 40px !important;

	margin-left: -15px;
	margin-top: -13px;

	border: 4px solid #2196F3;
	border-radius: 50%;

	position: relative;
}
.flatSearch_marker-inner:before {
	content: "";
	position: absolute;
	inset: 0;
	border-radius: 50%;
	background-color: #fff;
	opacity: 0.7;
}
.flatSearch_marker-inner a {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	color: #2196F3;
	font-weight: 600;
}

.flatSearch_loading {
	position: fixed;
	right: 12.5%;
	top: 14px;
	transform: translateX(50%);

	position: fixed;
	width: 10%;
	height: 9px;
	border: 2px solid #fff; 
	border-radius:10px;
	padding:1px;
}

.flatSearch_loading-bar {
	position:absolute;
	border-radius:10px;
	top:0;
	right:100%;
	bottom:0;
	left:0;
	background:#fff; 
	width:0;
	height: 5px;
	animation:borealisBar 2s linear infinite;
}

@keyframes borealisBar {
  0% {
    left:0%;
    right:100%;
    width:0%;
  }
  10% {
    left:0%;
    right:75%;
    width:25%;
  }
  90% {
    right:0%;
    left:75%;
    width:25%;
  }
  100% {
    left:100%;
    right:0%;
    width:0%;
  }
}

